# RAMS

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cppinvoke/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nativelib.cpp
app/src/main/cpp/rams/: Makefile
app/src/main/cpp/rams/img10/: arm_avgpool_s8_m.h  demo.cc  demo.h  test.h
app/src/main/cpp/rams/img10/cmsis_nn/Include/: arm_nn_math_types.h  arm_nnfunctions.h
app/src/main/cpp/rams/img10/cmsis_nn/Source/ConvolutionFunctions/: arm_depthwise_conv_3x3_s8.c
app/src/main/cpp/rams/img5/: conv_1x1_s1_dw_nxn_conv_1x1.c  demo.cc  demo.h  kernel_utils.h  test.h
app/src/main/cpp/rams/img5/cmsis_nn/Source/NNSupportFunctions/: arm_nn_mat_mult_nt_t_s8.c
app/src/main/cpp/rams/mbv2/: arm_depthwise_conv_s8_opt_m.h  demo.cc  demo.h  random_data.h  test.h
app/src/main/cpp/rams/mbv2/cmsis_nn/Include/: arm_nn_types.h  arm_nnsupportfunctions.h
app/src/main/cpp/rams/mbv2/cmsis_nn/Source/ConvolutionFunctions/: arm_convolve_get_buffer_sizes_s8.c
app/src/main/cpp/rams/mw10/: conv_1x1_s1_dw_3x3_conv_1x1.c  conv_3x3_s2_dw_3x3_conv_1x1.c  demo.cc  demo.h  test.h
app/src/main/cpp/rams/mw10/cmsis_nn/Source/ConvolutionFunctions/: arm_depthwise_conv_s8_opt.c
app/src/main/cpp/rams/mw5/: arm_depthwise_conv_3x3_s8_m.h  arm_nn_mat_mult_nt_t_s8_m.h  demo.cc  demo.h  test.h
app/src/main/cpp/rams/mw5/cmsis_nn/Source/BasicMathFunctions/: arm_elementwise_add_s8.c
app/src/main/cpp/rams/mw5/cmsis_nn/Source/ConvolutionFunctions/: arm_depthwise_conv_s8.c  arm_depthwise_conv_wrapper_s8.c
app/src/main/cpp/tflm/: Makefile
app/src/main/cpp/tflm/img10/: demo.cc  demo.h
app/src/main/cpp/tflm/img5/: demo.cc  demo.h
app/src/main/cpp/tflm/mbv2/: demo.cc  demo.h  random_data.h
app/src/main/cpp/tflm/mbv2/tensorflow/lite/micro/kernels/: all_ops_resolver.cc  all_ops_resolver.h
app/src/main/cpp/tflm/mbv2/tensorflow/lite/micro/kernels/cmsis_nn/: conv.cc
app/src/main/cpp/tflm/mw10/: demo.cc  demo.h  model.h
app/src/main/cpp/tflm/mw5/: demo.cc  demo.h  model.h
app/src/main/cpp/tflm/mw5/tensorflow/lite/micro/kernels/cmsis_nn/: depthwise_conv.cc
app/src/main/java/com/example/cppinvoke/: FirstFragment.java  MainActivity.java  NativeLib.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/cppinvoke/: ExampleUnitTest.java
attention-based_models/rams/android/: rams_clip_128  rams_clip_16  rams_clip_256  rams_clip_32  rams_clip_512  rams_clip_64  rams_clip_8  rams_deit_128  rams_deit_16  rams_deit_197  rams_deit_32  rams_deit_64  rams_deit_8  rams_dinov3_128  rams_dinov3_16  rams_dinov3_201  rams_dinov3_32  rams_dinov3_64  rams_dinov3_8
attention-based_models/rams/linux/: rams_clip_128  rams_clip_16  rams_clip_256  rams_clip_32  rams_clip_512  rams_clip_64  rams_clip_8  rams_deit_128  rams_deit_16  rams_deit_197  rams_deit_32  rams_deit_64  rams_deit_8  rams_dinov3_128  rams_dinov3_16  rams_dinov3_201  rams_dinov3_32  rams_dinov3_64  rams_dinov3_8
attention-based_models/tflm/android/: android_tflm_clip  android_tflm_deit  android_tflm_dinov3
attention-based_models/tflm/linux/: linux_tflm_clip  linux_tflm_deit  linux_tflm_dinov3
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
